2005-11-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	2.13.2.
	
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(get_process_memory_writable), (get_process_memory_info),
	(update_info_mutable_cols):
	* src/proctable.h:

	Added "Writable memory" column. I know this is a bit cryptic.

2005-10-29  Benoît Dejean  <benoit@placenet.org>

	* src/favorites.c: (add_single_to_blacklist):
	* src/interface.c: (menu_item_select_cb):
	* src/load-graph.c: (load_graph_unalloc), (load_graph_alloc):
	* src/memmaps.c: (compare_memmaps), (memmaps_timer),
	(create_single_memmaps_dialog):
	* src/openfiles.c: (update_openfiles_dialog), (openfiles_timer),
	(create_single_openfiles_dialog):
	* src/procactions.c: (renice_single_process),
	(kill_single_process):
	* src/procman.c: (color_changed_cb), (procman_get_tree_state),
	(procman_save_tree_state), (procman_save_config), (main):
	* src/proctable.c: (sort_ints), (proctable_free_info),
	(remove_info_from_tree):
	
	Replaced many g_return* with g_assert.

2005-10-27  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Oops, forgot to increase version.

2005-10-27  Benoît Dejean  <benoit@placenet.org>

	* NEWS:

	Released 2.13.1.

2005-10-12  Adam Weinberger  <adamw@gnome.org>

	* src/interface.c: Change "Receive" and "Send"
	  labels to read "Received" and "Sent", to accurately
	  portray what they're counting. Fixes bug #318714
	  submitted by Christian Rose.
	* src/gnome-system-monitor.schemas.in.h: Reword a
	  confusing schema description, correcting a spelling
	  error in the process. Fixes bug #318712, submitted by
	  Christian Rose.

2005-09-04  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.c: (cb_row_selected):
	* src/gnome-system-monitor.schemas.in:
	* src/infoview.c:
	* src/infoview.h:
	* src/interface.c: (create_proc_view), (update_sensitivity):
	* src/procman.c: (procman_data_new), (procman_save_config):
	* src/procman.h: