@@ -22,11 +22,14 @@ enum DiskColumns
 	DISK_TYPE,
 	DISK_TOTAL,
 	DISK_FREE,
+	DISK_AVAIL,
+	/* USED have to be the last column */
 	DISK_USED,
 	/* numeric columns */
 	DISK_USED_PERCENTAGE,
 	DISK_TOTAL_UINT64,
 	DISK_FREE_UINT64,
+	DISK_AVAIL_UINT64,
 	DISK_USED_UINT64,
 	DISK_N_COLUMNS
 };
@@ -50,21 +53,23 @@ sort_bytes(GtkTreeModel *model, GtkTreeIter *iter1, GtkTreeIter *iter2,
 
 static void
 fsusage_stats(const glibtop_fsusage *buf,
-	      guint64 *bused, guint64 *bfree, guint64 *btotal,
+	      guint64 *bused, guint64 *bfree, guint64 *bavail, guint64 *btotal,
 	      gint *percentage)
 {
 	guint64 total = buf->blocks * buf->block_size;
 
 	if (!total) {
 		/* not a real device */
-		*btotal = *bfree = *bused = 0ULL;
+		*btotal = *bfree = *bavail = *bused = 0ULL;
 		*percentage = 0;
 	} else {
 		float percent;
 		*btotal = total;
 		*bfree = buf->bfree * buf->block_size;
+		*bavail = buf->bavail * buf->block_size;
 		*bused = *btotal - *bfree;
-		percent = 100.0f * *bused / *btotal;
+		/* percent = 100.0f * *bused / *btotal; */
+		percent = 100.0f * *bused / (*bused + *bavail);
 		*percentage = CLAMP((gint)percent, 0, 100);
 	}
 }
@@ -107,17 +112,18 @@ add_disk(GtkListStore *list, const glibtop_mountentry *entry)
 	GdkPixbuf *pixbuf;
 	GtkTreeIter iter;
 	glibtop_fsusage usage;
-	gchar *used_str, *total_str, *free_str;
-	guint64 bused, bfree, btotal;
+	gchar *used_str, *total_str, *free_str, *avail_str;
+	guint64 bused, bfree, bavail, btotal;
 	gint percentage;
 
 	pixbuf = get_icon_for_device(entry->mountdir);
 
 	glibtop_get_fsusage(&usage, entry->mountdir);
-	fsusage_stats(&usage, &bused, &bfree, &btotal, &percentage);
+	fsusage_stats(&usage, &bused, &bfree, &bavail, &btotal, &percentage);
 
 	used_str = SI_gnome_vfs_format_file_size_for_display(bused);
 	free_str = SI_gnome_vfs_format_file_size_for_display(bfree);
+	avail_str = SI_gnome_vfs_format_file_size_for_display(bavail);
 	total_str = SI_gnome_vfs_format_file_size_for_display(btotal);
 
 	gtk_list_store_append(list, &iter);
@@ -128,10 +134,12 @@ add_disk(GtkListStore *list, const glibtop_mountentry *entry)
 			   DISK_TYPE, entry->type,
 			   DISK_TOTAL, total_str,
 			   DISK_FREE, free_str,
+			   DISK_AVAIL, avail_str,
 			   DISK_USED, used_str,
 			   DISK_USED_PERCENTAGE, percentage,
 			   DISK_TOTAL_UINT64, btotal,
 			   DISK_FREE_UINT64, bfree,
+			   DISK_AVAIL_UINT64, bavail,
 			   DISK_USED_UINT64, bused,
 			   -1);
 
@@ -140,6 +148,7 @@ add_disk(GtkListStore *list, const glibtop_mountentry *entry)
 
 	g_free(used_str);
 	g_free(free_str);
+	g_free(avail_str);
 	g_free(total_str);
 }
 
@@ -188,7 +197,8 @@ create_disk_view(ProcData *procdata)
 		N_("Type"),
 		N_("Total"),
 		N_("Free"),
-		N_("Used"),
+		N_("Available"),
+		N_("Used")
 	};
 
 	disk_box = gtk_vbox_new(FALSE, 6);
@@ -220,10 +230,12 @@ create_disk_view(ProcData *procdata)
 				   G_TYPE_STRING,	/* DISK_TYPE */
 				   G_TYPE_STRING,	/* DISK_TOTAL */
 				   G_TYPE_STRING,	/* DISK_FREE */
+				   G_TYPE_STRING,	/* DISK_AVAIL */
 				   G_TYPE_STRING,	/* DISK_USED */
 				   G_TYPE_INT,		/* DISK_USED_PERCENTAGE */
 				   G_TYPE_UINT64,	/* DISK_TOTAL_UINT64 */
 				   G_TYPE_UINT64,	/* DISK_FREE_UINT64 */
+				   G_TYPE_UINT64,	/* DISK_AVAIL_UINT64 */
 				   G_TYPE_UINT64	/* DISK_USED_UINT64 */
 		);
 
@@ -269,7 +281,7 @@ create_disk_view(ProcData *procdata)
 	cell = gtk_cell_renderer_text_new();
 	gtk_tree_view_column_pack_start(col, cell, FALSE);
 	gtk_tree_view_column_set_attributes(col, cell, "text", DISK_USED, NULL);
-	gtk_tree_view_column_set_title(col, _(titles[5]));
+	gtk_tree_view_column_set_title(col, _(titles[G_N_ELEMENTS(titles) - 1]));
 
 	cell = gtk_cell_renderer_progress_new();
 	gtk_tree_view_column_pack_start(col, cell, TRUE);
@@ -290,6 +302,11 @@ create_disk_view(ProcData *procdata)
 					DISK_FREE,
 					sort_bytes,
 					GINT_TO_POINTER(DISK_FREE_UINT64),
+					NULL);
+	gtk_tree_sortable_set_sort_func(GTK_TREE_SORTABLE(model),
+					DISK_AVAIL,
+					sort_bytes,
+					GINT_TO_POINTER(DISK_AVAIL_UINT64),
 					NULL);
 	gtk_tree_sortable_set_sort_func(GTK_TREE_SORTABLE(model),
 					DISK_USED,
