@@ -1,3 +1,9 @@
+2005-11-08  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.c: (fsusage_stats), (add_disk), (create_disk_view):
+
+	Added "available" column. Closes #320603.
+
 2005-11-04  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
